<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop_joy</name>
  <version>0.0.0</version>
  <description>TODO: Lee ju hyun</description>
  <maintainer email="02stu4@gmail.com">turtle01</maintainer>
  <license>TODO: Apache License</license>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rospy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
